# proc-result

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: docs.yml  rust.yml
examples/: failure.rs  hang_forever.sh  signal.rs  success.rs
src/: lib.rs  raw.rs  windows.rs
src/unix/: exit_code.rs  mod.rs  signal.rs  wait_state.rs  wait_status.rs
