[package]
name = "proc-result"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = "deny"

[features]
std = []
default = ["std"]
serde = ["serde/derive"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dependencies.num-traits]
version = "0.2.19"
default-features = false

[dev-dependencies]
libc = "0.2.172"
serde_json = "1.0.140"
