[package]
name = "proc-result"
description = "A tiny cross-platform library containing exit status and code types"
repository = "http://crates.lurey.io/proc-result"
license = "MIT"
version = "0.3.0"
edition = "2024"
keywords = ["cli", "exit-codes", "sysexit"]
categories = [
  "command-line-interface",
  "development-tools::testing",
  "no-std",
  "os",
]

[lints.clippy]
pedantic = "deny"

[features]
std = []
default = ["std"]
serde = ["serde/derive"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dependencies.num-traits]
version = "0.2.19"
default-features = false

[dev-dependencies]
libc = "0.2.172"
serde_json = "1.0.140"
serde_test = "1.0.177"
